--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+strip = true # Automatically strip symbols from the binary
+opt-level = "s" # Optimize for size
+lto = true # Enable link time optimisation
+codegen-units = 1 # Maximize size reduction optimisations
+
 [dependencies]
